2011-04-26  Chris Rogers  <crogers@google.com>

        Reviewed by Kenneth Russell.

        Fix web audio build on mac port
        https://bugs.webkit.org/show_bug.cgi?id=59355

        No new tests since audio API is not yet implemented.

        * WebCore.xcodeproj/project.pbxproj:
        * bindings/js/JSAudioContextCustom.cpp:
        (WebCore::JSAudioContext::visitChildren):
        * bindings/js/JSJavaScriptAudioNodeCustom.cpp:
        (WebCore::JSJavaScriptAudioNode::visitChildren):
        * webaudio/AudioContext.idl:

2011-04-26  Chris Rogers  <crogers@google.com>

        Reviewed by Kenneth Russell.

        Add FFTFrame implementation for FFmpeg
        https://bugs.webkit.org/show_bug.cgi?id=59408

        No new tests since audio API is not yet implemented.

        * WebCore.gyp/WebCore.gyp:
        * WebCore.gypi:
        * platform/audio/FFTFrame.h:
        * platform/audio/FFTFrameStub.cpp:
        * platform/audio/ffmpeg: Added.
        * platform/audio/ffmpeg/FFTFrameFFMPEG.cpp: Added.
        (WebCore::FFTFrame::FFTFrame):
        (WebCore::FFTFrame::initialize):
        (WebCore::FFTFrame::cleanup):
        (WebCore::FFTFrame::~FFTFrame):
        (WebCore::FFTFrame::multiply):
        (WebCore::FFTFrame::doFFT):
        (WebCore::FFTFrame::doInverseFFT):
        (WebCore::FFTFrame::realData):
        (WebCore::FFTFrame::imagData):
        (WebCore::FFTFrame::getUpToDateComplexData):
        (WebCore::FFTFrame::contextForSize):
        * platform/audio/mac/FFTFrameMac.cpp:
        * webaudio/ConvolverNode.cpp:

2011-04-26  Jeff Miller  <jeffm@apple.com>

        Add a newline at the end of SVGFEDropShadowElement.idl.

        * svg/SVGFEDropShadowElement.idl:

2011-04-26  Mihai Parparita  <mihaip@chromium.org>

        Reviewed by Eric Seidel.

        InlineBox.h shouldn't include RenderBR.h
        https://bugs.webkit.org/show_bug.cgi?id=59480

        Per bug 59348 RenderBR.h is a "top header" by include * size, because