@@ -1,3 +1,14 @@
+2011-04-26  Anders Carlsson  <andersca@apple.com>
+
+        Fix clang++ build.
+
+        You can never have too many casts!
+
+        * accessibility/mac/AccessibilityObjectWrapper.mm:
+        (-[AccessibilityObjectWrapper position]):
+        * editing/mac/SelectionControllerMac.mm:
+        (WebCore::accessibilityConvertScreenRect):
+
 2011-04-26  Chris Rogers  <crogers@google.com>
 
         Reviewed by Kenneth Russell.
